--- a/home.css
+++ b/home.css
@@ -9,9 +9,8 @@
 body {
   height: 100vh;
   width: 100%;
-  background-color: aquamarine;
   display: grid;
-  grid-template-rows: 60px auto 300px;
+  grid-template-rows: 60px auto 80px;
   grid-template-columns: 100%;
   align-items: center;
   justify-content: center;
@@ -20,18 +19,59 @@ body {
 header {
   background-color: brown;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
 }
 
+header span {
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 25px;
+  color: white;
+}
+
 nav {
   height: 100%;
+  display: flex;
+  
 }
 
 ul {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 500px;
+  height: 100%;
+}
+
+li {
+  list-style: none;
+  font-size: 18px;
+  color: white;
+}
+
+li a {
+  text-decoration: none;
+  
+}
+
+a{
+  color: white;
+  transition: 600ms;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 100%;
 }
 
