--- a/home.css
+++ b/home.css
@@ -78,7 +78,7 @@ a:hover {
 
 main {
   display: flex;
-  flex-direction: column;
+  
   align-items: flex-start;
   padding: 35px;
   width: 100%;
@@ -129,7 +129,14 @@ button#addButton a {
   padding: 5px;
   width: 100%;
   height: 100%;
+  background-color: var(--secondary);
   text-decoration: none;
+  border-radius: 8px;
+  transition: 600ms;
+}
+
+button#addButton a:hover {
+  background-color: var(--buttonHover);
 }
 
 button#addButton a img {
