--- a/pages/books/form_book.css
+++ b/pages/books/form_book.css
@@ -60,6 +60,10 @@ input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
+.radioInput  label, span {
+  color: var(--secondary);
+}
+
 .ranged {
   display: flex;
   align-items: center;
