--- a/home.css
+++ b/home.css
@@ -147,3 +147,10 @@ button#addButton a img {
 button#addButton a span {
   font-size: 18px;
 }
+
+.background {
+  width: 500px;
+  height: 500px;
+  margin-top: 80px;
+  opacity: 0.4;
+}
