--- a/pages/books/form_book.css
+++ b/pages/books/form_book.css
@@ -60,8 +60,19 @@ input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
+.radioInput {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .radioInput  label, span {
   color: var(--secondary);
+}
+
+.radioInput  span {
+  color: var(--secondary);
+  margin: 0 25px 0 5px;
 }
 
 .ranged {
