--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -79,11 +79,16 @@ a:hover {
 main {
   display: flex;
   
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   padding: 35px;
   width: 100%;
   height: 100%;
   background-color: var(--background);
+}
+
+main.mainHome {
+  flex-direction: column;
 }
 
 footer {
